remove unused packages

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -49,7 +49,7 @@
             matInput
             formControlName="email"
             type="email"
-            placeholder="Enter your email. E.g. shirley@gmail.com"
+            placeholder="E.g. shirley@gmail.com"
             required
           />
           <mat-error
@@ -103,7 +103,6 @@
         <img
           src="images/love letter.png"
           alt="contact picture"
-          class="flying-image"
           data-aos="zoom-in-up"
           data-aos-delay="100"
           data-aos-duration="1000"
